# wgpu-raytracer

./: .gitignore  Cargo.toml  README.md  build.rs
src/: blit.rs  camera.rs  compute.wgsl  compute_pass.rs  copy.wgsl  instance.rs  lib.rs  light.rs  main.rs  material.rs  mega_kernel.rs  model.rs  render_pass.rs  spectrum.rs  tonemap.rs  wavefront.rs
src/kernels/: blit.wgsl  mega_kernel.wgsl  wavefront.wgsl
