[package]
name = "wgpu-raytracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.14", features = [ "derive" ] }
cgmath = "0.18.0"
env_logger = "0.10"
pollster = "0.3"
wgpu = "0.18.0"
winit = "0.28"
rand = "0.8.5"
tobj = { version = "3.2.1", features = [
    "async",
]}

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"