[package]
name = "wgpu-raytracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.25", features = ["derive"] }
cgmath = "0.18.0"
env_logger = "0.11"
pollster = "0.4"
wgpu = "29.0"
winit = "0.30"
rand = "0.10"
tobj = { version = "4.0", features = ["async"] }

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.3"
